--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <canvas id="screen" width="637px" height="286px"></canvas>
 
       <!-- Load the code that runs the drum machine -->
-      <script src="drum-machine.js"></script>
+      <script src="js/drum-machine.js"></script>
     </div>
 
     <h2>Annotated source code</h2>
